# ft_irc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  config  main.cpp  usage.md
src/: Bot.cpp  Bot.hpp  CMakeLists.txt  Channel.cpp  Channel.hpp  Client.cpp  Client.hpp  ClientHandler.cpp  ClientHandler.hpp  Commands.cpp  Server.cpp  Server.hpp  User.cpp  User.hpp  Utils.hpp  debug.hpp  defines.hpp  main.cpp  something.cpp  something.hpp  typedef.hpp
